<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Content of Add note activity:
        1. Multi-line edit text
            a. backgroundTint transparent property is for removing the line for edit text

       -->

    <!--    <TextView-->
    <!--        android:id="@+id/addNoteActivityContent"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:isScrollContainer="true"-->
    <!--        android:padding="18dp"-->
    <!--        android:scrollbars="vertical"-->
    <!--        android:text="TextView"-->
    <!--        android:textColor="#000000"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/addNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/addNote_title"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addNoteContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addNoteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addNote_details"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/addNoteBottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNoteTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        android:onClick="btnInsertPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:tint="@color/white"
        app:backgroundTint="@color/purple_500"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/ic_baseline_save_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/addNoteBottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>