...
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_note" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateNoteBtn"
        android:onClick="btnUpdatePressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
...
